src/objects/Bond_Buy__c.object
<CustomObject>
    <description>Bond buys represent a potential purchase for a bond offering that is be pitched to an investor</description>
    <fields>
        <fullName>Bond_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The bond offering being purchased</description>
        <inlineHelpText>The bond offering being purchased</inlineHelpText>
        <label>Bond Offering</label>
        <referenceTo>Bond_Offering__c</referenceTo>
        <relationshipLabel>Bond Buys</relationshipLabel>
        <relationshipName>Bond_Buys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The investor being pitched the bond offering</description>
        <inlineHelpText>The investor being pitched the bond offering</inlineHelpText>
        <label>Investor</label>
        <referenceTo>Investor__c</referenceTo>
        <relationshipLabel>Bond Buys</relationshipLabel>
        <relationshipName>Bond_Buys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the bond buy.  Valid values are Pending, Passed, and Purchased</description>
        <inlineHelpText>The status of the bond buy.  Valid values are Pending, Passed, and Purchased</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchased</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The number of $10,000 bond units that are being offered</description>
        <inlineHelpText>The number of $10,000 bond units that are being offered</inlineHelpText>
        <label>Units</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bond Buy</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Bond Buy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bond Buys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>